--- a/booking.html
+++ b/booking.html
@@ -6,18 +6,27 @@
   <title>Book a Cut | Owethu Mbuli</title>
   <style>
     html, body {
+      height: 100%;
       margin: 0;
       padding: 0;
-      overflow-x: hidden;
-      height: 100%;
+      overflow: hidden; /* Prevent body scroll */
     }
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: url('barbershop-chair.jpg') no-repeat center center fixed;
+      background: url('images (12).jpg') no-repeat center center fixed;
       background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
       color: #fff;
+    }
+
+    .wrapper {
+      height: 100%;
+      overflow-y: auto; /* Allow content scrolling */
       padding: 20px;
+      box-sizing: border-box;
     }
 
     h1 {
@@ -111,54 +120,58 @@
   </style>
 </head>
 <body>
-  <h1>Book Your Haircut</h1>
+  <div class="wrapper">
+    <h1>Book Your Haircut</h1>
 
-  <form id="bookingForm" action="https://formsubmit.co/owethuandrew10@gmail.com" method="POST" onsubmit="return submitWithLoading()">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="about:blank">
+    <form id="bookingForm" action="https://formsubmit.co/owethuandrew10@gmail.com" method="POST" onsubmit="return submitWithLoading()">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="about:blank">
 
-    <label for="name">Full Name:</label>
-    <input type="text" id="name" name="name" required>
+      <label for="name">Full Name:</label>
+      <input type="text" id="name" name="name" required>
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
 
-    <label for="phone">Phone Number:</label>
-    <input type="tel" id="phone" name="phone" required>
+      <label for="phone">Phone Number:</label>
+      <input type="tel" id="phone" name="phone" required>
 
-    <label for="service">Select Service:</label>
-    <select id="service" name="service" required>
-      <option value="">-- Select --</option>
-      <option value="Haircut">Haircut</option>
-      <option value="Beard Trim">Beard Trim</option>
-      <option value="Shave">Shave</option>
-      <option value="Haircut + Beard">Haircut + Beard Combo</option>
-    </select>
+      <label for="service">Select Service:</label>
+      <select id="service" name="service" required>
+        <option value="">-- Select --</option>
+        <option value="Haircut">Haircut</option>
+        <option value="Beard Trim">Beard Trim</option>
+        <option value="Shave">Shave</option>
+        <option value="Haircut + Beard">Haircut + Beard Combo</option>
+      </select>
 
-    <label for="day">Preferred Day:</label>
-    <select id="day" name="preferred_day" required>
-      <option value="">-- Select --</option>
-      <option value="Monday">Monday</option>
-      <option value="Tuesday">Tuesday</option>
-      <option value="Wednesday">Wednesday</option>
-    </select>
+      <label for="day">Preferred Day:</label>
+      <select id="day" name="preferred_day" required>
+        <option value="">-- Select --</option>
+        <option value="Monday">Monday</option>
+        <option value="Tuesday">Tuesday</option>
+        <option value="Wednesday">Wednesday</option>
+      </select>
 
-    <label for="time">Preferred Time:</label>
-    <input type="time" id="time" name="preferred_time" required>
+      <label for="time">Preferred Time:</label>
+      <input type="time" id="time" name="preferred_time" required>
 
-    <label for="location">Location:</label>
-    <p>
-      <a href="https://www.google.com/maps" target="_blank" class="map-button">
-        📍 Open Google Maps to Select Location
-      </a>
-    </p>
-    <button type="button" onclick="getLocation()">📍 Use My Current Location</button>
-    <input type="url" id="location" name="location" placeholder="Paste your Google Maps location URL here" required>
+      <label for="location">Location:</label>
+      <p>
+        <a href="https://www.google.com/maps" target="_blank" class="map-button">
+          📍 Open Google Maps to Select Location
+        </a>
+      </p>
+      <button type="button" onclick="getLocation()">📍 Use My Current Location</button>
+      <input type="url" id="location" name="location" placeholder="Paste your Google Maps location URL here" required>
 
-    <button type="submit">Submit Booking</button>
-  </form>
+      <button type="submit">Submit Booking</button>
+    </form>
 
-  <a href="index.html" class="back-link">← Back to Home</a>
+    <div id="bottom-section" style="display: none;">
+      <a href="index.html" class="back-link">← Back to Home</a>
+    </div>
+  </div>
 
   <div id="loading-overlay">
     <div class="loader"></div>
@@ -184,13 +197,13 @@
       const form = document.getElementById('bookingForm');
       document.getElementById('loading-overlay').style.display = 'flex';
 
-      // Allow form to submit after short delay (to show loader)
       setTimeout(() => {
         document.getElementById('loading-overlay').style.display = 'none';
         form.reset();
+        document.getElementById('bottom-section').style.display = 'block';
       }, 2000);
 
-      return true; // Continue with native form submission
+      return true; // Allow FormSubmit to proceed
     }
   </script>
 </body>
