--- a/booking.html
+++ b/booking.html
@@ -9,7 +9,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      overflow: hidden; /* Prevent body scroll */
+      overflow: hidden;
     }
 
     body {
@@ -24,7 +24,7 @@
 
     .wrapper {
       height: 100%;
-      overflow-y: auto; /* Allow content scrolling */
+      overflow-y: auto;
       padding: 20px;
       box-sizing: border-box;
     }
@@ -71,19 +71,30 @@
       background: #4a00e0;
     }
 
-    .back-link {
-      display: block;
-      text-align: center;
-      margin-top: 20px;
-      color: #ffffff;
-      text-decoration: none;
-    }
-
     .map-button {
       display: inline-block;
       margin-bottom: 10px;
       color: #8e2de2;
       text-decoration: underline;
+    }
+
+    #bottom-section {
+      display: none;
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    #bottom-section button {
+      padding: 12px 24px;
+      background: #8e2de2;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #bottom-section button:hover {
+      background: #4a00e0;
     }
 
     #loading-overlay {
@@ -168,11 +179,15 @@
       <button type="submit">Submit Booking</button>
     </form>
 
-    <div id="bottom-section" style="display: none;">
-      <a href="index.html" class="back-link">← Back to Home</a>
+    <!-- Back to Home button (hidden until submitted) -->
+    <div id="bottom-section">
+      <a href="index.html">
+        <button>← Back to Home</button>
+      </a>
     </div>
   </div>
 
+  <!-- Loading Spinner Overlay -->
   <div id="loading-overlay">
     <div class="loader"></div>
   </div>
@@ -197,13 +212,14 @@
       const form = document.getElementById('bookingForm');
       document.getElementById('loading-overlay').style.display = 'flex';
 
+      // Simulate loading before showing confirmation
       setTimeout(() => {
         document.getElementById('loading-overlay').style.display = 'none';
         form.reset();
         document.getElementById('bottom-section').style.display = 'block';
       }, 2000);
 
-      return true; // Allow FormSubmit to proceed
+      return true; // Let FormSubmit proceed with submission
     }
   </script>
 </body>
