--- a/index.html
+++ b/index.html
@@ -2,411 +2,237 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-Frame-Options" content="DENY" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Owethu Mbuli | Personal Barber</title>
+  <title>Owethu Mbuli | Products</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
     body {
+      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
-      line-height: 1.6;
-      overflow-x: hidden;
+      background-color: #f4f4f4;
     }
+
     header {
-      background: rgba(30, 30, 47, 1);
-      color: white;
-      padding: 20px;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      transition: background 0.4s ease;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    header.scrolled { background: rgba(30, 30, 47, 0.85); }
-    .menu-toggle {
-      position: fixed;
-      top: 25px;
-      right: 20px;
-      font-size: 28px;
-      background: none;
-      border: none;
-      color: black;
-      cursor: pointer;
-      z-index: 2000;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-    .menu-toggle.open { color: white; }
-    #dropdown-menu {
-      position: fixed;
-      top: 0;
-      right: -250px;
-      height: 100%;
-      width: 250px;
-      background: #1e1e2f;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      padding-top: 80px;
-      transition: right 0.3s ease;
-      z-index: 1000;
-    }
-    #dropdown-menu.active { right: 0; }
-    #dropdown-menu a {
-      color: white;
-      padding: 15px 25px;
-      text-decoration: none;
-      width: 100%;
-      border-bottom: 1px solid #333;
-    }
-    #dropdown-menu a:hover { background: #333; }
-    .drawer-contact-buttons {
-      margin-top: auto;
-      width: 100%;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .drawer-btn {
-      background: #25d366;
-      color: white;
-      text-align: center;
-      padding: 12px;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    .drawer-btn.call { background: #3c3c3c; }
-    .drawer-btn:hover { opacity: 0.9; }
-    .hero {
-      background: url("background.jpg") center center/cover no-repeat;
-      color: white;
-      padding: 80px 20px 40px;
-      text-align: center;
-      position: relative;
-      margin-top: 90px;
-    }
-    .hero::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      z-index: 1;
-    }
-    .hero * { position: relative; z-index: 2; }
-    .hero h1 { font-size: 2.2em; margin-bottom: 10px; }
-    .hero p { font-size: 1.2em; }
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-      text-align: center;
-    }
-    section h2 { font-size: 1.8em; margin-bottom: 10px; }
-    .product-coming-soon {
-      background: url('product-coming.jpg') center center/cover no-repeat;
-      height: 300px;
-      position: relative;
-      border-radius: 10px;
-      margin-top: 40px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    }
-    .product-coming-soon .overlay {
-      background: rgba(0, 0, 0, 0.5);
+      padding: 1rem;
+      background-color: #000;
       color: #fff;
-      height: 100%;
-      width: 100%;
+      text-align: center;
+    }
+
+    section#products {
+      padding: 2rem 1rem;
+      background: #f9f9f9;
+    }
+
+    #products h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .product-scroll {
+      display: flex;
+      overflow-x: auto;
+      gap: 1rem;
+      scroll-snap-type: x mandatory;
+      padding-bottom: 1rem;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+
+    .product-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .product-card {
+      min-width: 250px;
+      flex: 0 0 auto;
+      scroll-snap-align: start;
+      padding: 1rem;
+      border-radius: 1rem;
+      color: white;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      border-radius: 10px;
+      justify-content: space-between;
+      transition: transform 0.3s ease;
     }
-    .product-coming-soon h2 { font-size: 1.8em; margin-bottom: 10px; }
-    .product-coming-soon p { font-size: 0.9em; opacity: 0.8; }
-    footer {
-      background: #1e1e2f;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
+
+    .product-card:hover {
+      transform: scale(1.05);
     }
+
+    .product-image {
+      width: 100%;
+      height: 160px;
+      background-size: cover;
+      background-position: center;
+      border-radius: 0.75rem;
+      margin-bottom: 1rem;
+    }
+
+    .product-buttons {
+      display: flex;
+      gap: 0.5rem;
+      margin-top: 1rem;
+    }
+
+    .product-buttons button {
+      flex: 1;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .buy-btn {
+      background: #000;
+      color: #fff;
+    }
+
+    .learn-btn {
+      background: #fff;
+      color: #000;
+    }
+
     @media (max-width: 600px) {
-      .hero h1 { font-size: 1.6em; }
+      .product-card {
+        min-width: 200px;
+      }
     }
   </style>
 </head>
 <body>
-  <header id="header">
-    <button class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</button>
-    <h1>Owethu Mbuli</h1>
+
+  <header>
+    <h1>Welcome to Owethu Mbuli's Shop</h1>
   </header>
 
+  <section id="products">
+    <h2>Our Products</h2>
+    <div class="product-scroll">
+      <div class="product-card" style="background: #e74c3c;">
+        <div class="product-image" style="background-image: url('images/product1.jpg');"></div>
+        <h3>Product 1</h3>
+        <div class="product-buttons">
+          <button class="buy-btn">Buy</button>
+          <button class="learn-btn">Learn More</button>
+        </div>
+      </div>
 
- <nav id="dropdown-menu">
-  <button id="close-drawer" onclick="toggleMenu()">✖</button>
-  <h2 style="width: 100%; text-align: center; color: white; padding: 15px 0; border-bottom: 1px solid #444; animation: fadeSlideIn 0.6s ease;">Menu</h2>
-  <a href="#about" onclick="toggleMenu()">About</a>
-  <a href="booking.html" onclick="toggleMenu()">Book Now</a>
-  <a href="#contact" onclick="toggleMenu()">Contact</a>
-  <a href="gallery.html" onclick="toggleMenu()">View Our Work</a>
-  <a href="advertising.html" onclick="toggleMenu()">Advertising</a>
-  <a href="privacy.html" onclick="toggleMenu()" style="color: white; padding: 15px 25px; text-decoration: none; width: 100%; border-bottom: 1px solid #333;">Privacy Policy</a>
-  <div class="drawer-contact-buttons">
-    <a href="https://wa.me/27635892769" class="drawer-btn whatsapp" target="_blank">💬 WhatsApp</a>
-    <a href="tel:+27635892769" class="drawer-btn call">📞 Call</a>
-  </div>
-</nav> 
-  <section class="hero" id="home">
-    <h1>Personal Barber & House Call Specialist</h1>
-    <p>Serving Soweto, Roodepoort & surrounding areas.</p>
-  </section>
+      <div class="product-card" style="background: #3498db;">
+        <div class="product-image" style="background-image: url('images/product2.jpg');"></div>
+        <h3>Product 2</h3>
+        <div class="product-buttons">
+          <button class="buy-btn">Buy</button>
+          <button class="learn-btn">Learn More</button>
+        </div>
+      </div>
 
-  <section class="section" id="about">
-    <h2>About Me</h2>
-    <p>I'm Owethu Mbuli, a personal barber offering professional house call grooming services in Gauteng — especially Soweto, Roodepoort, and nearby areas. Whether it’s a fresh fade or a classic clean-up, I come to you.</p>
-    <p><strong>Available:</strong> Monday, Tuesday, Wednesday</p>
-  </section>
+      <div class="product-card" style="background: #2ecc71;">
+        <div class="product-image" style="background-image: url('images/product3.jpg');"></div>
+        <h3>Product 3</h3>
+        <div class="product-buttons">
+          <button class="buy-btn">Buy</button>
+          <button class="learn-btn">Learn More</button>
+        </div>
+      </div>
 
-  <section class="section product-coming-soon">
-    <div class="overlay">
-      <h2>🛍️ Products</h2>
-      <p>Coming Soon</p>
+      <div class="product-card" style="background: #9b59b6;">
+        <div class="product-image" style="background-image: url('images/product4.jpg');"></div>
+        <h3>Product 4</h3>
+        <div class="product-buttons">
+          <button class="buy-btn">Buy</button>
+          <button class="learn-btn">Learn More</button>
+        </div>
+      </div>
+
+      <div class="product-card" style="background: #f39c12;">
+        <div class="product-image" style="background-image: url('images/product5.jpg');"></div>
+        <h3>Product 5</h3>
+        <div class="product-buttons">
+          <button class="buy-btn">Buy</button>
+          <button class="learn-btn">Learn More</button>
+        </div>
+      </div>
+
+      <div class="product-card" style="background: #1abc9c;">
+        <div class="product-image" style="background-image: url('images/product6.jpg');"></div>
+        <h3>Product 6</h3>
+        <div class="product-buttons">
+          <button class="buy-btn">Buy</button>
+          <button class="learn-btn">Learn More</button>
+        </div>
+      </div>
     </div>
   </section>
 
-  <section class="section" id="ads">
-    <h2>Look Out For</h2>
-    <img src="billboard.jpg" alt="Advertising Billboard" style="max-width:100%; height:auto; border-radius:10px; margin:20px 0;">
-    <p>We’ll soon be featuring sponsored products and promotions from brands we trust. Watch this space!</p>
-    <p>If you'd like your product featured here, 
-      <a href="advertising.html" style="color:#8e2de2; font-weight:bold;">click here to advertise</a>.
-    </p>
-  </section>
-
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:owethuandrew10@gmail.com">owethuandrew10@gmail.com</a></p>
-    <p>Phone: <a href="tel:+27635892769">063 589 2769</a></p>
-  </section>
-
-  <footer>
-    &copy; 2025 Owethu Mbuli. All rights reserved.
-  </footer>
-
   <script>
-    function toggleMenu() {
-  const menu = document.getElementById("dropdown-menu");
-  const toggle = document.getElementById("menuToggle");
-  const isOpen = menu.classList.toggle("active");
-  toggle.textContent = isOpen ? "<" : "☰";
-  toggle.classList.toggle("open", isOpen);
+    const productContainer = document.querySelector('.product-scroll');
+    const productCards = document.querySelectorAll('.product-card');
+    const scrollDotsContainer = document.createElement('div');
+    let scrollAmount = 0;
+    const scrollStep = 300;
+    const delay = 3000;
+    let autoScrollInterval;
 
-  // Prevent scrolling on body when menu is open
-  document.body.style.overflow = isOpen ? "hidden" : "auto";
-    }
+    // Create dot indicators
+    scrollDotsContainer.style.display = 'flex';
+    scrollDotsContainer.style.justifyContent = 'center';
+    scrollDotsContainer.style.gap = '8px';
+    scrollDotsContainer.style.marginTop = '1rem';
 
-    document.addEventListener("click", function (event) {
-      const menu = document.getElementById("dropdown-menu");
-      const toggle = document.getElementById("menuToggle");
-      if (!menu.contains(event.target) && !toggle.contains(event.target)) {
-        if (menu.classList.contains("active")) {
-          menu.classList.remove("active");
-          toggle.textContent = "☰";
-          toggle.classList.remove("open");
-        }
-      }
+    productCards.forEach((_, index) => {
+      const dot = document.createElement('span');
+      dot.style.width = '10px';
+      dot.style.height = '10px';
+      dot.style.borderRadius = '50%';
+      dot.style.background = index === 0 ? '#000' : '#ccc';
+      dot.setAttribute('data-index', index);
+      scrollDotsContainer.appendChild(dot);
     });
-  </script>
 
-<!-- Privacy Notice Popup -->
-<div id="privacy-popup">
-  <p>We value your privacy and use your information only to provide better service. By continuing, you accept our Privacy Policy.</p>
-  <a href="privacy.html" id="view-policy-link">View Policy</a>
-  <button id="accept-privacy">Accept</button>
-</div>
+    document.querySelector('#products').appendChild(scrollDotsContainer);
 
-<style>
-  #privacy-popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.95);
-    background: #1e1e2f;
-    color: white;
-    padding: 20px 30px 50px;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.5);
-    border-radius: 12px;
-    font-size: 0.95em;
-    z-index: 3000;
-    display: none;
-    max-width: 90%;
-    width: 300px;
-    text-align: center;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-    opacity: 0;
-  }
+    const dots = scrollDotsContainer.querySelectorAll('span');
 
-  #privacy-popup.show {
-    display: block;
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
-
-  #privacy-popup #view-policy-link {
-    position: absolute;
-    bottom: 10px;
-    right: 15px;
-    font-size: 0.85em;
-    color: #8e2de2;
-    text-decoration: none;
-  }
-
-  #privacy-popup button#accept-privacy {
-    margin-top: 15px;
-    background: none;
-    color: white;
-    border: none;
-    font-weight: bold;
-    font-size: 1em;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-  }
-
-  
-@keyframes bounceIn {
-  0% {
-    opacity: 0;
-    transform: translate(-50%, -40%) scale(0.8);
-  }
-  60% {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1.05);
-  }
-  80% {
-    transform: translate(-50%, -48%) scale(0.98);
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-#privacy-popup.show {
-  display: block;
-  animation: bounceIn 0.6s ease forwards;
-}
-
-  #privacy-popup button#accept-privacy:hover {
-    transform: scale(1.2);
-  }
-  #close-drawer {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  background: none;
-  border: none;
-  font-size: 22px;
-  color: white;
-  cursor: pointer;
-  z-index: 1100;
-}
-#close-drawer:hover {
-  transform: scale(1.2);
-}
-</style>
-
-<script>
-  function setCookie(name, value, days) {
-    const d = new Date();
-    d.setTime(d.getTime() + (days*24*60*60*1000));
-    const expires = "expires=" + d.toUTCString();
-    document.cookie = name + "=" + value + ";" + expires + ";path=/";
-  }
-
-  function getCookie(name) {
-    const decodedCookie = decodeURIComponent(document.cookie);
-    const ca = decodedCookie.split(';');
-    name = name + "=";
-    for(let i = 0; i < ca.length; i++) {
-      let c = ca[i];
-      while (c.charAt(0) === ' ') c = c.substring(1);
-      if (c.indexOf(name) === 0) return c.substring(name.length, c.length);
-    }
-    return "";
-  }
-
-  window.addEventListener("load", () => {
-    const popup = document.getElementById("privacy-popup");
-    const shown = getCookie("seenPrivacyPopup");
-    if (!shown) {
-      popup.classList.add("show");
-      const closePopup = () => popup.classList.remove("show");
-      setTimeout(closePopup, 5000);
-      document.getElementById("accept-privacy").addEventListener("click", () => {
-        setCookie("seenPrivacyPopup", "true", 4);
-        closePopup();
+    function highlightDot(index) {
+      dots.forEach((dot, i) => {
+        dot.style.background = i === index ? '#000' : '#ccc';
       });
     }
-  });
-</script>
 
+    function autoScrollProducts() {
+      if (!productContainer) return;
 
-<script>
-  let startX = 0;
-  let endX = 0;
+      productContainer.scrollBy({ left: scrollStep, behavior: 'smooth' });
+      scrollAmount += scrollStep;
 
-  const menu = document.getElementById("dropdown-menu");
-  const toggle = document.getElementById("menuToggle");
+      const currentIndex = Math.round(productContainer.scrollLeft / productContainer.clientWidth);
+      highlightDot(currentIndex);
 
-  // Swipe on the menu to CLOSE
-  menu.addEventListener("touchstart", (e) => {
-    startX = e.changedTouches[0].screenX;
-  });
-
-  menu.addEventListener("touchend", (e) => {
-    endX = e.changedTouches[0].screenX;
-    const swipeRight = endX - startX;
-
-    if (swipeRight > 50) { // Swiped RIGHT
-      menu.classList.remove("active");
-      toggle.textContent = "☰";
-      toggle.classList.remove("open");
-      document.body.style.overflow = "auto";
+      if (scrollAmount >= productContainer.scrollWidth - productContainer.clientWidth) {
+        scrollAmount = 0;
+        productContainer.scrollTo({ left: 0, behavior: 'smooth' });
+        highlightDot(0);
+      }
     }
-  });
 
-  // Swipe on the screen edge to OPEN
-  document.addEventListener("touchstart", (e) => {
-    // Only start tracking if the touch begins on the right edge (within 20px)
-    if (e.touches[0].clientX > window.innerWidth - 20) {
-      startX = e.touches[0].clientX;
-    } else {
-      startX = 0;
+    function startAutoScroll() {
+      autoScrollInterval = setInterval(autoScrollProducts, delay);
     }
-  });
 
-  document.addEventListener("touchend", (e) => {
-    if (!startX) return;
-    endX = e.changedTouches[0].clientX;
-    const swipeLeft = startX - endX;
-
-    if (swipeLeft > 50) { // Swiped LEFT from right edge
-      menu.classList.add("active");
-      toggle.textContent = "✖";
-      toggle.classList.add("open");
-      document.body.style.overflow = "hidden";
+    function stopAutoScroll() {
+      clearInterval(autoScrollInterval);
     }
-  });
-</script>
+
+    // Start auto-scroll
+    startAutoScroll();
+
+    // Pause on hover
+    productContainer.addEventListener('mouseenter', stopAutoScroll);
+    productContainer.addEventListener('mouseleave', startAutoScroll);
+  </script>
 
 </body>
 </html>
