--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
       .hero h1 { font-size: 1.6em; }
     }
   </style>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
 <body>
   <header id="header">
