--- a/index.html
+++ b/index.html
@@ -144,6 +144,25 @@
     @media (max-width: 600px) {
       .hero h1 { font-size: 1.6em; }
     }
+    .scroll-dots {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.scroll-dot {
+  width: 12px;
+  height: 12px;
+  background: #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.scroll-dot.active {
+  background: #333;
+}
   </style>
   <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
