--- a/index.html
+++ b/index.html
@@ -163,7 +163,27 @@
 
 .scroll-dot.active {
   background: #333;
+}#backToTop {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  background: #1e1e2f;
+  color: white;
+  border: none;
+  padding: 12px 18px;
+  border-radius: 50px;
+  font-size: 14px;
+  cursor: pointer;
+  display: none;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  z-index: 1000;
+  transition: background 0.3s ease, transform 0.3s ease;
 }
+
+#backToTop:hover {
+  background: #8e2de2;
+  transform: scale(1.1);
+                }
 
 </style>
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -557,6 +577,21 @@ window.addEventListener("DOMContentLoaded", () => {
   resetInterval(); // Start auto scroll
 });
 </script>
+  <script>
+  const backToTopBtn = document.getElementById("backToTop");
+
+  window.addEventListener("scroll", () => {
+    if (window.scrollY > 300) {
+      backToTopBtn.style.display = "block";
+    } else {
+      backToTopBtn.style.display = "none";
+    }
+  });
+
+  function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  }
+  </script>
 
 </body>
 </html>
