--- a/index.html
+++ b/index.html
@@ -592,6 +592,6 @@ window.addEventListener("DOMContentLoaded", () => {
     window.scrollTo({ top: 0, behavior: "smooth" });
   }
   </script>
-
+<button id="backToTop" onclick="scrollToTop()">⬆ Top</button>
 </body>
 </html>
