--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
   justify-content: center;
   gap: 10px;
 }
-
 .scroll-dot {
   width: 12px;
   height: 12px;
@@ -160,11 +159,9 @@
   cursor: pointer;
   transition: background 0.3s ease;
 }
-
 .scroll-dot.active {
   background: #333;
 }
-
 #backToTop {
   position: fixed;
   bottom: 25px;
@@ -181,7 +178,6 @@
   z-index: 1000;
   transition: background 0.3s ease, transform 0.3s ease;
 }
-
 #backToTop:hover {
   background: #8e2de2;
   transform: scale(1.1);
@@ -196,7 +192,7 @@
 <body>
   <header id="header">
     <button class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</button>
-    <h1>Owethu Mbuli</h1>
+    <h1>King's Cut Barbershop</h1>
   </header>
 
 
@@ -253,7 +249,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Owethu Mbuli. All rights reserved.
+    &copy; 2025 King's Cut Barbershop. All rights reserved.
   </footer>
 
   <script>
@@ -432,7 +428,6 @@
   justify-content: center;
   gap: 10px;
 }
-
 .scroll-dot {
   width: 12px;
   height: 12px;
@@ -441,11 +436,9 @@
   cursor: pointer;
   transition: background 0.3s ease;
 }
-
 .scroll-dot.active {
   background: #333;
 }
-
 #backToTop {
   position: fixed;
   bottom: 25px;
@@ -462,7 +455,6 @@
   z-index: 1000;
   transition: background 0.3s ease, transform 0.3s ease;
 }
-
 #backToTop:hover {
   background: #8e2de2;
   transform: scale(1.1);
@@ -554,7 +546,6 @@
   });
 </script>
 
-<button id="backToTop" onclick="scrollToTop()">⬆ Top</button>
 
 <script>
 window.addEventListener("DOMContentLoaded", () => {
@@ -603,6 +594,7 @@ window.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
+<button id="backToTop" onclick="scrollToTop()">⬆ Top</button>
 
 <script>
   const backToTopBtn = document.getElementById("backToTop");
