--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
   <a href="advertising.html" onclick="toggleMenu()">Advertising</a>
   <a href="privacy.html" onclick="toggleMenu()" style="color: white; padding: 15px 25px; text-decoration: none; width: 100%; border-bottom: 1px solid #333;">Privacy Policy</a>
   <div class="drawer-contact-buttons">
+    <a href="register.html" onclick="toggleMenu()">Register</a>
     <a href="https://wa.me/27635892769" class="drawer-btn whatsapp" target="_blank">💬 WhatsApp</a>
     <a href="tel:+27635892769" class="drawer-btn call">📞 Call</a>
   </div>
