--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     <h2>About Me</h2>
     <p>I'm Owethu Mbuli, a personal barber offering professional house call grooming services in Gauteng — especially Soweto, Roodepoort, and nearby areas. Whether it’s a fresh fade or a classic clean-up, I come to you.</p>
     <p><strong>Available:</strong> Monday, Tuesday, Wednesday</p>
+    <a href="booking.html" style="display: inline-block; margin-top: 20px; padding: 12px 24px; background: #8e2de2; color: white; text-decoration: none; border-radius: 8px; font-weight: bold; transition: background 0.3s ease;">Book Now</a>
   </section>
 
   <section class="section" id="ads-slider">
