--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@
   background: #8e2de2;
   transform: scale(1.1);
 }
+    header h1 {
+  font-size: 1.2em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 70%;
+    }
 
 </style>
   <meta name="apple-mobile-web-app-capable" content="yes" />
